--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "electron-router-dom": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "electron-router-dom": "^1.0.1"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
