--- a/package.json
+++ b/package.json
@@ -1,71 +1,77 @@
 {
-  "displayName": "My Awesome Electron App",
-  "name": "my-awesome-electron-app",
-  "description": "Your awesome app description",
-  "version": "2.0.2",
-  "main": "./node_modules/.dev/main/index.js",
-  "resources": "src/resources",
-  "author": {
-    "name": "Dalton Menezes",
-    "email": "daltonmenezes@outlook.com"
-  },
-  "license": "MIT",
-  "scripts": {
-    "start": "electron-vite preview",
-    "dev": "cross-env NODE_ENV=development electron-vite dev --watch",
-    "compile:app": "electron-vite build",
-    "compile:packageJSON": "node ./bin/modules/postbuild/index.js",
-    "prebuild": "run-s compile:app compile:packageJSON",
-    "build": "./node_modules/.bin/electron-builder",
-    "postinstall": "run-s prebuild install:deps",
-    "install:deps": "electron-builder install-app-deps",
-    "make:release": "node ./bin/modules/release/index.js",
-    "release": "electron-builder --publish always",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "electron-router-dom": "^1.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
-    "@daltonmenezes/electron-devtools-installer": "^1.0.1",
-    "@types/node": "^18.7.18",
-    "@types/react": "^18.0.20",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
-    "@vitejs/plugin-react": "^2.1.0",
-    "cross-env": "^7.0.3",
-    "electron": "^20.1.4",
-    "electron-builder": "^23.3.3",
-    "electron-react-devtools": "^0.5.3",
-    "electron-vite": "^1.0.9",
-    "eslint": "^8.22.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "npm-run-all": "^4.1.5",
-    "open": "^8.4.0",
-    "prettier": "^2.7.1",
-    "rollup-plugin-inject-process-env": "^1.3.1",
-    "sass": "^1.54.9",
-    "semver": "^7.3.7",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.2",
-    "vite-tsconfig-paths": "^3.5.0"
-  },
-  "lint-staged": {
-    "*.{js,ts}": [
-      "eslint --quiet --fix"
-    ]
-  },
-  "eslintIgnore": [
-    "dist"
-  ]
+	"displayName": "My Awesome Electron App",
+	"name": "my-awesome-electron-app",
+	"description": "Your awesome app description",
+	"version": "2.0.2",
+	"main": "./node_modules/.dev/main/index.js",
+	"resources": "src/resources",
+	"author": {
+		"name": "Dalton Menezes",
+		"email": "daltonmenezes@outlook.com"
+	},
+	"license": "MIT",
+	"scripts": {
+		"start": "electron-vite preview",
+		"dev": "cross-env NODE_ENV=development electron-vite dev --watch",
+		"compile:app": "electron-vite build",
+		"compile:packageJSON": "node ./bin/modules/postbuild/index.js",
+		"prebuild": "run-s compile:app compile:packageJSON",
+		"build": "./node_modules/.bin/electron-builder",
+		"postinstall": "run-s prebuild install:deps",
+		"install:deps": "electron-builder install-app-deps",
+		"make:release": "node ./bin/modules/release/index.js",
+		"release": "electron-builder --publish always",
+		"prepare": "husky install"
+	},
+	"dependencies": {
+		"electron-router-dom": "^1.0.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.3.0"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^17.0.3",
+		"@commitlint/config-conventional": "^17.0.3",
+		"@daltonmenezes/electron-devtools-installer": "^1.0.1",
+		"@next/eslint-plugin-next": "^12.2.5",
+		"@types/node": "^18.7.18",
+		"@types/react": "^18.0.20",
+		"@types/react-dom": "^18.0.6",
+		"@typescript-eslint/eslint-plugin": "^5.37.0",
+		"@typescript-eslint/parser": "^5.33.1",
+		"@vitejs/plugin-react": "^2.1.0",
+		"cross-env": "^7.0.3",
+		"electron": "^20.1.4",
+		"electron-builder": "^23.3.3",
+		"electron-react-devtools": "^0.5.3",
+		"electron-vite": "^1.0.9",
+		"eslint": "^8.23.1",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-import-resolver-typescript": "^3.5.1",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx-a11y": "^6.6.1",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-react": "^7.31.8",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"husky": "^8.0.1",
+		"lint-staged": "^13.0.3",
+		"npm-run-all": "^4.1.5",
+		"open": "^8.4.0",
+		"prettier": "^2.7.1",
+		"rollup-plugin-inject-process-env": "^1.3.1",
+		"sass": "^1.54.9",
+		"semver": "^7.3.7",
+		"typescript": "^4.8.3",
+		"vite": "^3.1.2",
+		"vite-tsconfig-paths": "^3.5.0"
+	},
+	"lint-staged": {
+		"*.{js,ts}": [
+			"eslint --quiet --fix"
+		]
+	},
+	"eslintIgnore": [
+		"dist"
+	]
 }
