--- a/package.json
+++ b/package.json
@@ -27,38 +27,37 @@
     "electron-router-dom": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@daltonmenezes/electron-devtools-installer": "^1.0.1",
-    "@types/node": "^18.14.1",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "@vitejs/plugin-react": "^4.0.4",
     "cross-env": "^7.0.3",
-    "electron": "^23.1.1",
-    "electron-builder": "^23.6.0",
-    "electron-react-devtools": "^0.5.3",
-    "electron-vite": "^1.0.19",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
+    "electron": "^25.3.2",
+    "electron-builder": "^24.6.3",
+    "electron-extension-installer": "^1.2.0",
+    "electron-vite": "^1.0.27",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.1.2",
+    "lint-staged": "^13.2.3",
     "npm-run-all": "^4.1.5",
-    "open": "^8.4.2",
-    "prettier": "^2.8.4",
+    "open": "^9.1.0",
+    "prettier": "^3.0.0",
     "rollup-plugin-inject-process-env": "^1.3.1",
-    "sass": "^1.58.3",
-    "semver": "^7.3.8",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.4",
-    "vite-tsconfig-paths": "^4.0.5"
+    "sass": "^1.64.2",
+    "semver": "^7.5.4",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.8",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "lint-staged": {
     "*.{js,ts}": [
