--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "npm-run-all": "^4.1.5",
-    "open": "^9.1.0",
+    "open": "8.4.2",
     "prettier": "^3.0.0",
     "rollup-plugin-inject-process-env": "^1.3.1",
     "sass": "^1.64.2",
