--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     ],
     "jsx": "react-jsx",
     "importHelpers": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
+    "module": "ESNext",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "sourceMap": true,
