--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,4 +6,23 @@
   "editor.quickSuggestions": {
     "strings": "on"
   },
+
+  "editor.defaultFormatter": "biomejs.biome",
+  "biome.enabled": true,
+
+  "[javascript]": {
+    "editor.formatOnSave": true
+  },
+
+  "[typescript]": {
+    "editor.formatOnSave": true
+  },
+
+  "[typescriptreact]": {
+    "editor.formatOnSave": true
+  },
+
+  "[json]": {
+    "editor.formatOnSave": true
+  }
 }
