--- a/package.json
+++ b/package.json
@@ -30,29 +30,22 @@
     "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "@tailwindcss/vite": "^4.0.9",
     "@types/node": "^20.4.5",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
     "@vitejs/plugin-react": "^4.0.4",
     "cross-env": "^7.0.3",
     "electron": "^34.3.0",
     "electron-builder": "^25.1.8",
     "electron-extension-installer": "^1.2.0",
     "electron-vite": "^3.0.0",
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.3",
     "npm-run-all": "^4.1.5",
     "open": "8.4.2",
-    "prettier": "^3.0.0",
     "rollup-plugin-inject-process-env": "^1.3.1",
     "semver": "^7.5.4",
     "tailwindcss": "^4.0.9",
@@ -62,16 +55,11 @@
   },
   "lint-staged": {
     "*.{js,ts}": [
-      "eslint --quiet --fix"
+      "biome check --apply --organize-imports-enabled=false --no-errors-on-unmatched",
+      "biome lint --apply --no-errors-on-unmatched"
     ]
   },
-  "eslintIgnore": [
-    "dist"
-  ],
   "pnpm": {
-    "onlyBuiltDependencies": [
-      "electron",
-      "electron-vite"
-    ]
+    "onlyBuiltDependenciesFile": "trusted-dependencies-scripts.json"
   }
 }
