fix: update path for trusted dependencies file in package.json and enhance file writing logic in prebuild module

--- a/package.json
+++ b/package.json
@@ -59,6 +59,6 @@
     ]
   },
   "pnpm": {
-    "onlyBuiltDependenciesFile": "trusted-dependencies-scripts.json"
+    "onlyBuiltDependenciesFile": "./trusted-dependencies-scripts.json"
   }
 }
