--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   "license": "MIT",
   "scripts": {
     "start": "electron-vite preview",
+    "predev": "run-s clean:dev",
     "dev": "cross-env NODE_ENV=development electron-vite dev --watch",
     "compile:app": "electron-vite build",
     "compile:packageJSON": "tsx ./src/shared/lib/electron-app/release/modules/prebuild.ts",
-    "prebuild": "run-s compile:app compile:packageJSON",
+    "prebuild": "run-s clean:dev compile:app compile:packageJSON",
     "build": "./node_modules/.bin/electron-builder",
     "postinstall": "run-s prebuild install:deps",
     "install:deps": "electron-builder install-app-deps",
     "make:release": "tsx ./src/shared/lib/electron-app/release/modules/release.ts",
     "release": "electron-builder --publish always",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "clean:dev": "rimraf ./node_modules/.dev"
   },
   "dependencies": {
     "electron-router-dom": "^2.1.0",
@@ -44,6 +46,7 @@
     "husky": "^8.0.3",
     "npm-run-all": "^4.1.5",
     "open": "8.4.2",
+    "rimraf": "^6.0.1",
     "rollup-plugin-inject-process-env": "^1.3.1",
     "semver": "^7.5.4",
     "tailwindcss": "^4.0.9",
