feat: add utility functions and alert components; update dependencies for improved styling

--- a/package.json
+++ b/package.json
@@ -26,10 +26,15 @@
     "clean:dev": "rimraf ./node_modules/.dev"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "electron-router-dom": "^2.1.0",
+    "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
