--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.0.4",
+    "code-inspector-plugin": "^0.20.1",
     "cross-env": "^7.0.3",
     "electron": "^34.3.0",
     "electron-builder": "^25.1.8",
