feat: add template files and configurations for Electron app setup

--- a/template/package.json
+++ b/template/package.json
@@ -15,12 +15,12 @@
     "predev": "run-s clean:dev",
     "dev": "cross-env NODE_ENV=development electron-vite dev --watch",
     "compile:app": "electron-vite build",
-    "compile:packageJSON": "tsx ./src/shared/lib/electron-app/release/modules/prebuild.ts",
+    "compile:packageJSON": "tsx ./src/lib/electron-app/release/modules/prebuild.ts",
     "prebuild": "run-s clean:dev compile:app compile:packageJSON",
     "build": "./node_modules/.bin/electron-builder",
     "postinstall": "run-s prebuild install:deps",
     "install:deps": "electron-builder install-app-deps",
-    "make:release": "tsx ./src/shared/lib/electron-app/release/modules/release.ts",
+    "make:release": "tsx ./src/lib/electron-app/release/modules/release.ts",
     "release": "electron-builder --publish always",
     "prepare": "husky install",
     "clean:dev": "rimraf ./node_modules/.dev"
@@ -42,6 +42,7 @@
     "@types/node": "^22.13.8",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/semver": "^7.5.8",
     "@vitejs/plugin-react": "^4.0.4",
     "code-inspector-plugin": "^0.20.1",
     "cross-env": "^7.0.3",
