--- a/template/package.json
+++ b/template/package.json
@@ -52,7 +52,7 @@
     "electron-extension-installer": "^1.2.0",
     "electron-vite": "^3.0.0",
     "npm-run-all": "^4.1.5",
-    "open": "8.4.2",
+    "open": "^10.1.0",
     "rimraf": "^6.0.1",
     "rollup-plugin-inject-process-env": "^1.3.1",
     "semver": "^7.5.4",
