chore: update action-electron-builder to version 1.0.1 and set package manager to pnpm

--- a/template/.github/workflows/release.yml
+++ b/template/.github/workflows/release.yml
@@ -36,8 +36,9 @@ jobs:
         run: sudo apt-get install libarchive-tools rpm
 
       - name: Release Electron app
-        uses: coparse-inc/action-electron-builder@v1.0.0
+        uses: daltonmenezes/action-electron-builder@v1.0.1
         with:
+          package_manager: "pnpm"
           # GitHub token, automatically provided to the action
           # (No need to define this secret in the repo settings)
           github_token: ${{ secrets.github_token }}
