chore: update biome configuration and dependencies

--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -10,6 +10,11 @@
   "editor.defaultFormatter": "biomejs.biome",
   "biome.enabled": true,
 
+  "editor.codeActionsOnSave": {
+    "source.organizeImports.biome": "explicit",
+    "source.fixAll.biome": "explicit"
+  },
+
   "[javascript]": {
     "editor.formatOnSave": true
   },
