--- a/template/biome.json
+++ b/template/biome.json
@@ -14,6 +14,9 @@
       "quoteStyle": "single",
       "semicolons": "asNeeded",
       "trailingCommas": "es5"
+    },
+    "assist": {
+      "enabled": false
     }
   },
   "linter": {
