--- a/template/biome.json
+++ b/template/biome.json
@@ -1,55 +1,63 @@
 {
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "off",
+        "useSortedAttributes": "on",
+        "useSortedKeys": "off",
+        "useSortedProperties": "on"
+      }
+    },
+    "enabled": true
+  },
+  "files": {
+    "experimentalScannerIgnores": ["dist", "node_modules"]
+  },
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
     "indentWidth": 2,
-    "lineWidth": 80,
-    "lineEnding": "lf"
+    "lineEnding": "lf",
+    "lineWidth": 80
   },
   "javascript": {
     "formatter": {
       "arrowParentheses": "asNeeded",
+      "bracketSpacing": true,
+      "indentStyle": "space",
       "jsxQuoteStyle": "double",
       "quoteStyle": "single",
       "semicolons": "asNeeded",
       "trailingCommas": "es5"
-    },
-    "assist": {
-      "enabled": false
     }
   },
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true,
       "a11y": {
         "noSvgWithoutTitle": "off",
         "useButtonType": "off"
       },
-      "suspicious": {
-        "noArrayIndexKey": "info",
-        "noDuplicateObjectKeys": "warn",
-        "noExplicitAny": "off",
-        "noEmptyInterface": "off",
-        "noDuplicateProperties": "warn"
-      },
-      "style": {
-        "noUselessElse": "warn"
+      "complexity": {
+        "noBannedTypes": "warn"
       },
       "correctness": {
         "noUnusedImports": "warn",
         "useExhaustiveDependencies": "off"
       },
-      "complexity": {
-        "noBannedTypes": "warn"
+      "recommended": true,
+      "style": {
+        "noUselessElse": "warn"
+      },
+      "suspicious": {
+        "noArrayIndexKey": "info",
+        "noDuplicateObjectKeys": "warn",
+        "noDuplicateProperties": "warn",
+        "noEmptyInterface": "off",
+        "noExplicitAny": "off",
+        "noUnknownAtRules": "off"
       }
     }
-  },
-  "files": {
-    "experimentalScannerIgnores": [
-      "dist",
-      "node_modules"
-    ]
   }
 }
